fixed banner size image on larger screens and display of navbar text on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
           <meta name="twitter:creator" content="@EvanOnEarth_ETH">
           <meta name="twitter:description" content="Evan Gottschalk - Blockchain Architect. Contact for business inquiries." />
           <meta name="twitter:image" href="%PUBLIC_URL%/cardimage.png" content="%PUBLIC_URL%/cardimage.png" />
+          <!-- <script src="https://unpkg.com/@ruffle-rs/ruffle"></script> -->
+          <script src="/ruffle/ruffle.js"></script>
 
           <title>EvanOnEarth</title>
      </head>
